# ChatBots

./: .gitignore  README.md  docker-compose.yml  qml-variables.env  setup.bat  startsim.bat
container/: Dockerfile
container/clientDockerfile/: Dockerfile
container/serverDockerfile/: Dockerfile
container/work/: .gitignore  CMakeLists.txt  DisplayLogic.cpp  DisplayLogic.hpp  JsonSchema.hpp  TcpClientComm.cpp  TcpClientComm.hpp  TcpComm.hpp  TcpServerComm.cpp  TcpServerComm.hpp  build_run_server.bat  build_run_server.sh  main.cpp  main.qml  qml.qrc  run_client.sh
libtest/JSCONSTEST/: JSONCONSTEST.cpp
